--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -16,16 +16,19 @@
     .search {
       display: flex;
       align-items: center;
-      border: 0.5px solid lightgray;
-      padding: 3px;
+     
+      padding: 3px 3px 3px 8px;
+      width: 350px;
 
+      border-radius: 10px;
+      background: rgb(241, 252, 255);
       input {
         border: none;
         outline: none;
-        background: transparent;
-
+        background: rgb(241, 252, 255);
+        padding: 5px 5px 5px 10px;
         &::placeholder {
-          font-size: 12px;
+          font-size: 15px;
         }
       }
     }
