--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -13,11 +13,12 @@
     .logo {
       font-size: 20px;
       font-weight: bold;
-      color: #6439ff;
+      // color: #6439ff;
+      color: #191970;
     }
   }
 
-  hr {
+  hr { 
     height: 0;
     border: 0.5px solid rgb(230, 227, 227);
   }
@@ -50,7 +51,8 @@
 
         .icon {
           font-size: 18px;
-          color: #7451f8;
+          // color: #7451f8;
+          color: #191970;
         }
 
         span{
