--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,47 @@
 .login{
-    
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    form {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        border: 2px solid gray;
+        padding: 40px 30px 80px;
+        h1 {
+            margin-bottom: 30px;
+        }
+       input {
+        margin-block: 8px;
+        width: 300px;
+        border: none;
+        outline: none;
+        background-color: rgb(224, 240, 253);
+        padding: 9px 12px;
+        border-radius: 10px;
+        font-size: 15px;
+       }
+
+       button {
+        border: none;
+        background-color: rgba(25, 25, 112, 0.792);
+        background-color: rgb(25, 25, 112);
+        color: #fff;
+        padding: 7px 12px;
+        margin-top: 14px;
+        border-radius: 14px;
+        font-size: 18px;
+       }
+       button:hover {
+        background-color: rgba(25, 25, 112, 0.864);
+        cursor: pointer;
+        transition: all 0.5s ease-in-out;
+       }
+       span {
+        margin-top: 30px;
+        color: red;
+       }
+    }
 }
